--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
-h1
-{
-    color: red;
+body {
+  background-color: yellow;
+}
+
+h1 {
+  color: white;
+  text-align: center;
+  background-color: orange;
 }
